# faugere

./: .gitignore  README.md  bindings.ml  dune  dune-project  dune-workspace  example.ml  faugere.opam  gen.ml  lib.ml  test.ml
call_FGb/nv/int/: ._gmp.h  gmp.h  protocol_maple.h
call_FGb/nv/maple/C/: Makefile
src/: b.ml  bindings.ml  common.ml  dune  faugere.ml  faugere.mli  faugere_zarith.ml  faugere_zarith.mli  fgb.ml  fgb.mli  gen.ml  lib.ml  zarith_bind.c.ml  zarith_bind.ml  zarith_bind.mli  zarith_bind_stubs.c
src/bindings/: b.ml  bindings.ml  common.ml  dune
src/bindings/call_FGb/: README.txt
src/bindings/call_FGb/headers/: call_fgb_mod.h
src/bindings/call_FGb/nv/maple/C/: gb2.c
src/call_FGb/: Makefile
src/call_FGb/headers/: call_fgb_int.h  common.h
src/call_FGb/nv/maple/C/: call_fgb.h  call_fgb_basic.h  gb1.c  main.c
src/zbind/: dune  zarith_bind.c.ml  zarith_bind.mli
