(library
 (name faugere)
 (public_name faugere)
 (libraries faugere.bindings ctypes)
 (synopsis "The Faugere package entry point")
 (modules faugere)
)

(library
 (name faugere_zarith)
 (public_name faugere.zarith)
 (libraries faugere.bindings ctypes faugere.zbind faugere)
 (modules faugere_zarith)
 (synopsis "Faugere with zarith bindings")
 (optional)
)
