(library
  (name bindings)
  (libraries ctypes ctypes.foreign)
  (modules b stub bind common)
  (package faugere)
  (foreign_archives
    call_FGb/nv/maple/C/linux/fgb
    call_FGb/nv/maple/C/linux/fgbexp
    call_FGb/nv/maple/C/linux/gb
    call_FGb/nv/maple/C/linux/gbexp
    call_FGb/nv/maple/C/linux/minpoly
    call_FGb/nv/maple/C/linux/minpolyvgf
  )
  (foreign_stubs
   (include_dirs call_FGb/headers)
   (language c)
   (names stub)
   (flags :standard -lfgb -lfgbexp -lgb -lgbexp -lminpoly -lminpolyvgf -lgmp -lm -lstdc++ -lgomp -fopenmp -w)
  )
  (c_library_flags :standard -L%{project_root}/src/bindings/call_FGb/nv/maple/C/%{system} -lfgb -lfgbexp -lgb -lgbexp -lminpoly -lminpolyvgf -lgmp -lm -lstdc++ -lgomp)
)


(executable
  (name gen)
  (modules gen bindings)
  (libraries ctypes.stubs ctypes)
)

(rule
  (targets stub.c stub.ml)
  (deps gen.exe)
  (action (run ./gen.exe))
)

(rule
  (targets bind.ml)
  (deps bindings.ml)
  (action (copy bindings.ml bind.ml))
)