(library
  (name bindings)
  (libraries ctypes ctypes.foreign)
  (modules b stub bind common)
  (package faugere)
  ;(foreign_archives
  ;  fgb
  ;  fgbexp
  ;  gb
  ;  gbexp
  ;  minpoly
  ;  minpolyvgf
  ;)
  (foreign_stubs
   (include_dirs call_FGb/headers)
   (language c)
   (names stub)
   (flags :standard -lfgb -lfgbexp -lgb -lgbexp -lminpoly -lminpolyvgf -lgmp -lm -lstdc++ -lgomp -fopenmp -w)
  )
  ;(c_library_flags :standard -Lsrc/bindings/call_FGb/nv/maple/C/%{system} -lfgb -lfgbexp -lgb -lgbexp -lminpoly -lminpolyvgf -lgmp -lm -lstdc++ -lgomp)
  (c_library_flags :standard -Lsrc/bindings -lfgb -lfgbexp -lgb -lgbexp -lminpoly -lminpolyvgf -lgmp -lm -lstdc++ -lgomp)
)


(executable
  (name gen)
  (modules gen bindings)
  (libraries ctypes.stubs ctypes)
)

(rule
  (targets stub.c stub.ml)
  (deps gen.exe)
  (action (run ./gen.exe))
)

(rule
  (targets bind.ml)
  (deps bindings.ml)
  (action (copy bindings.ml bind.ml))
)

(rule
  (targets libfgb.a libfgbexp.a libgb.a libgbexp.a libminpoly.a libminpolyvgf.a)
  (action (progn
    (copy call_FGb/nv/maple/C/%{system}/libfgb.a libfgb.a)
    (copy call_FGb/nv/maple/C/%{system}/libfgbexp.a libfgbexp.a)
    (copy call_FGb/nv/maple/C/%{system}/libgb.a libgb.a)
    (copy call_FGb/nv/maple/C/%{system}/libgbexp.a libgbexp.a)
    (copy call_FGb/nv/maple/C/%{system}/libminpoly.a libminpoly.a)
    (copy call_FGb/nv/maple/C/%{system}/libminpolyvgf.a libminpolyvgf.a))
  )
)

(install
  (section stublibs)
  (files libfgb.a libfgbexp.a libgb.a libgbexp.a libminpoly.a libminpolyvgf.a)
)

;(install
;  (section lib)
;  (files (libfgb.a as __private__/bindings/libfgb.a) 
;         (libfgbexp.a as __private__/bindings/libfgbexp.a)
;         (libgb.a as __private__/bindings/libgb.a)
;         (libgbexp.a as __private__/bindings/libgbexp.a)
;         (libminpoly.a as __private__/bindings/libminpoly.a)
;         (libminpolyvgf.a as __private__/bindings/libminpolyvgf.a)
;  )
;)