(library
  (name zbind)
  (public_name faugere.zbind)
  (libraries bindings ppx_cstubs ctypes ctypes.foreign zarith)
  (wrapped false)
  (foreign_stubs
    (language c)
    (names zarith_bind_stubs)
    (flags :standard -lgmp)
  )
  (optional)
  (modules zarith_bind)
)

;adapted from https://github.com/fdopen/ctypes-zarith/blob/master/lib/dune
(rule
  (targets zarith_bind.ml zarith_bind_stubs.c)
  (deps zarith_bind.c.ml)
  (action (run %{bin:ppx_cstubs} -I %{lib:zarith:.} zarith_bind.c.ml -o %{targets})))
